--- a/the-perfect-spot-FE/src/app/components/restaurants/restaurants.component.html
+++ b/the-perfect-spot-FE/src/app/components/restaurants/restaurants.component.html
@@ -3,7 +3,9 @@
     <app-navigation-bar></app-navigation-bar>
   </div>
   <div class="m-5 w-100 shadow round stil">
-      <h1>Restaurants</h1>
+      <h1>Restaurants
+        <button *ngIf="isAdmin()" class="clickable ml-2 badge badge-warning" title="Create new restaurant" (click)="openAddRestaurantForm()">+</button>
+      </h1>
     <div  id="restaurants" class="row col-md-12 w-100 pt-1 pl-auto pr-auto">
 
       <app-filter-restaurants (filterEvent)="filterRestaurants($event)" (searchEvent)="searchRestaurants($event)"></app-filter-restaurants>
